# calculate_math

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .gitmodules  .railwayignore  AGENTS.md  CHECKLISTS.md  CLAUDE.md  Dockerfile  LICENSE  MCP.md  Makefile  README.md  RULES.md  SKILL_TREE_DIAGNOSIS.md  SOUL.md  WORKFLOWS.md  agent.md  agents_up.sh  docker-compose.dev.yml  docker-compose.yml  graph.bipartite.json  homework_2026-01-20.json  homework_2026-01-21.json  homework_2026-03-09.json  homework_2026-03-10.json  homework_2026-03-11.json  homework_parsed.json  orchestrate_tmux.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  research-graph-snapshot.md  tasks.md  기획안.md
.claude/: settings.local.json
.codex/: README.md  config.toml  env.sample
.openclaw/: workspace-state.json
.sisyphus/: boulder.json
_workspace/: FINAL_REPORT.md  apply_phase.py  build_merged_proposal.py  graph_review_2026_04_23.md  merged_graph_v0_3.json  phase1_graph_proposal.json  phase1_weaktag_taxonomy_v0_3_draft.md  phase2_graph_proposal.json  phase2_weaktag_taxonomy_v0_3_extension.md  phase3_graph_proposal.json  phase4_graph_proposal.json  phase5_csat_separation_proposal.md  phase6_graph_proposal.json
agent_core/: config.py  engine.py  io.py  llm.py  main.py
agents/: ARCHITECT.md  EXEC.md  SECURITY.md
app/: __init__.py  bipartite_loader.py  bridge_bank.py  config.py  curriculum_graph.py  dag_loader.py  feature_flags.py  instrumentation.py  invite_service.py  level1_loader.py  progress_store.py  repositories.py  (+3 more)
(+1145 files in other folders)
